--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   .btn{margin-top:8px;border:none;padding:8px 10px;border-radius:8px;background:var(--accent);color:white;cursor:pointer;width:100%;transition:opacity 0.3s ease}
   .btn[disabled]{opacity:.45;cursor:not-allowed}
   .delete-btn{color:var(--danger);cursor:pointer;font-weight:bold;margin-left:8px}
-  footer{margin-top:14px;color:var(--muted);font-size:14px} /* tăng chữ footer */
+  footer{margin-top:14px;color:var(--muted);font-size:15px} /* Tăng chữ ghi chú */
   .admin-panel{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-  .small{font-size:14px;color:var(--muted)} /* tăng chữ nhỏ */
+  .small{font-size:13px;color:var(--muted)}
   #statusBanner{padding:10px;text-align:center;border-radius:8px;margin-bottom:10px;font-weight:600}
   [title]{position:relative}
   [title]:hover::after{
@@ -51,56 +51,6 @@
   }
   @media(max-width:1100px){ .board{grid-template-columns:repeat(3, 1fr)} }
   @media(max-width:720px){ .board{grid-template-columns:repeat(1, 1fr)} header{flex-direction:column;align-items:flex-start} }
-
-  /* Ghi chú Admin */
-  #adminNoteToggle {
-    position: fixed;
-    bottom: 18px;
-    right: 18px;
-    width: 42px;
-    height: 42px;
-    background: linear-gradient(135deg, #6b46c1, #3b82f6);
-    color: white;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    z-index: 1100;
-    transition: transform 0.2s ease;
-  }
-  #adminNoteToggle:hover { transform: scale(1.1); }
-
-  #adminNoteBox {
-    position: fixed;
-    bottom: 70px;
-    right: 16px;
-    background: rgba(11,18,32,0.97);
-    border: 1px solid rgba(255,255,255,0.06);
-    border-radius: 12px;
-    padding: 10px;
-    width: 300px;
-    max-height: 200px;
-    overflow-y: auto;
-    z-index: 1100;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  }
-  #adminNoteInput {
-    width: 100%;
-    min-height: 80px;
-    max-height: 150px;
-    background: rgba(255,255,255,0.05);
-    border: none;
-    color: white;
-    padding: 6px;
-    border-radius: 8px;
-    resize: vertical;
-    margin-bottom: 8px;
-    display: none;
-  }
-  #adminNoteDisplay { font-size: 14px; color: #d1d5db; white-space: pre-wrap; }
 </style>
 </head>
 
@@ -245,6 +195,7 @@
       alert("🔒 Ngoài giờ đăng ký (chỉ mở 19:50 Thứ 6 → 21:00 Thứ 7 hoặc admin mở thủ công)");
       return;
     }
+
     let name = localStorage.getItem('myName');
     if (!name) {
       name = prompt('Nhập tên của bạn:').trim();
@@ -277,16 +228,16 @@
       adminBtn.style.display = 'none';
       toggleOpenBtn.style.display = 'inline-block';
       clearNameBtn.style.display = 'inline-block';
-      adminNoteInput.style.display = 'block';
       sessionStorage.setItem('isAdmin', 'true');
+      adminNoteInput.style.display = noteVisible ? "block" : "none"; // hiển thị input khi admin
     } else {
       resetBtn.style.display = 'none';
       logoutBtn.style.display = 'none';
       adminBtn.style.display = 'inline-block';
       toggleOpenBtn.style.display = 'none';
       clearNameBtn.style.display = 'none';
-      adminNoteInput.style.display = 'none';
       sessionStorage.removeItem('isAdmin');
+      adminNoteInput.style.display = "none";
     }
   }
 
@@ -364,8 +315,63 @@
   }
   updateButtonStates();
   setInterval(updateButtonStates, 60000);
+</script>
 
-  // --- Ghi chú Admin ---
+<!-- ✅ Ghi chú Admin realtime -->
+<div id="adminNoteToggle">📝</div>
+<div id="adminNoteBox">
+  <textarea id="adminNoteInput" placeholder="✏️ Nhập ghi chú cho mọi người..."></textarea>
+  <div id="adminNoteDisplay">📝 <span id="adminNoteText">Không có ghi chú nào</span></div>
+</div>
+
+<style>
+  #adminNoteToggle {
+    position: fixed;
+    bottom: 18px;
+    right: 18px;
+    width: 42px;
+    height: 42px;
+    background: linear-gradient(135deg, #6b46c1, #3b82f6);
+    color: white;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1100;
+  }
+  #adminNoteBox {
+    position: fixed;
+    bottom: 70px;
+    right: 16px;
+    background: rgba(11,18,32,0.97);
+    border: 1px solid rgba(255,255,255,0.06);
+    border-radius: 12px;
+    padding: 10px;
+    width: 300px;
+    max-height: 200px;
+    overflow-y: auto;
+    display: none;
+    z-index: 1100;
+  }
+  #adminNoteInput {
+    width: 100%;
+    min-height: 80px;
+    max-height: 150px;
+    background: rgba(255,255,255,0.05);
+    border: none;
+    color: white;
+    padding: 6px;
+    border-radius: 8px;
+    resize: vertical;
+    margin-bottom: 8px;
+    display: none;
+  }
+  #adminNoteDisplay { font-size: 14px; color: #d1d5db; white-space: pre-wrap; }
+</style>
+
+<script>
   const adminNoteToggle = document.getElementById("adminNoteToggle");
   const adminNoteBox = document.getElementById("adminNoteBox");
   const adminNoteInput = document.getElementById("adminNoteInput");
@@ -375,27 +381,24 @@
   adminNoteToggle.onclick = () => {
     noteVisible = !noteVisible;
     adminNoteBox.style.display = noteVisible ? "block" : "none";
-    adminNoteInput.style.display = (noteVisible && sessionStorage.getItem("isAdmin")) ? "block" : "none";
+    if (noteVisible && sessionStorage.getItem("isAdmin")) {
+      adminNoteInput.style.display = "block";
+    } else {
+      adminNoteInput.style.display = "none";
+    }
   };
 
-  adminNoteRef.on("value", (snap) => {
+  adminNoteRef.on("value", snap => {
     const val = snap.val() || "Không có ghi chú nào";
     adminNoteText.textContent = val;
     adminNoteInput.value = val;
   });
 
-  adminNoteInput.addEventListener("change", () => {
+  adminNoteInput.addEventListener("input", () => {
     if (!sessionStorage.getItem("isAdmin")) return;
     adminNoteRef.set(adminNoteInput.value.trim());
   });
 </script>
-
-<!-- HTML ghi chú Admin -->
-<div id="adminNoteToggle">📝</div>
-<div id="adminNoteBox" style="display:none">
-  <textarea id="adminNoteInput" placeholder="✏️ Nhập ghi chú cho mọi người..."></textarea>
-  <div id="adminNoteDisplay">📝 <span id="adminNoteText">Không có ghi chú nào</span></div>
-</div>
 
 </body>
 </html>
