--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   .btn{margin-top:8px;border:none;padding:8px 10px;border-radius:8px;background:var(--accent);color:white;cursor:pointer;width:100%;transition:opacity 0.3s ease}
   .btn[disabled]{opacity:.45;cursor:not-allowed}
   .delete-btn{color:var(--danger);cursor:pointer;font-weight:bold;margin-left:8px}
-  footer{margin-top:14px;color:var(--muted);font-size:15px} /* Tăng chữ ghi chú */
+  footer{margin-top:14px;color:var(--muted);font-size:15px}
   .admin-panel{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
   .small{font-size:13px;color:var(--muted)}
   #statusBanner{padding:10px;text-align:center;border-radius:8px;margin-bottom:10px;font-weight:600}
@@ -231,7 +231,6 @@
       toggleOpenBtn.style.display = 'inline-block';
       clearNameBtn.style.display = 'inline-block';
       sessionStorage.setItem('isAdmin', 'true');
-      // kiểm tra an toàn: adminNoteInput có thể được khai báo sau (trong thẻ script khác)
       if (typeof adminNoteInput !== 'undefined') {
         adminNoteInput.style.display = noteVisible ? "block" : "none";
       }
@@ -281,10 +280,22 @@
     updateButtonStates();
   });
 
+  // ✅ Thêm hàm chuẩn hoá tên
+  function normalizeName(n) {
+    if (!n) return "";
+    return String(n).trim().toLowerCase();
+  }
+
+  // ✅ Vá lỗi admin bị cảnh báo xoá tên
   blacklistRef.on('value', snap => {
-    const list = snap.val() || {};
-    const myName = localStorage.getItem('myName');
-    if (myName && list[myName]) {
+    const listObj = snap.val() || {};
+    const blacklistSet = new Set(Object.keys(listObj).map(k => normalizeName(k)));
+    const myNameRaw = localStorage.getItem('myName');
+    const myName = normalizeName(myNameRaw);
+
+    if (sessionStorage.getItem('isAdmin')) return;
+
+    if (myName && blacklistSet.has(myName)) {
       alert('⚠️ Tên cũ của bạn đã bị admin xoá, vui lòng nhập lại tên mới.');
       localStorage.removeItem('myName');
     }
@@ -327,112 +338,4 @@
 <!-- ✅ Ghi chú Admin realtime -->
 <div id="adminNoteToggle">📝</div>
 <div id="adminNoteBox">
-  <textarea id="adminNoteInput" placeholder="✏️ Nhập ghi chú cho mọi người..."></textarea>
-  <div id="adminNoteDisplay">📝 <span id="adminNoteText" class="placeholder">Không có ghi chú nào</span></div>
-</div>
-
-<style>
-  #adminNoteToggle {
-    position: fixed;
-    bottom: 18px;
-    right: 18px;
-    width: 42px;
-    height: 42px;
-    background: linear-gradient(135deg, #6b46c1, #3b82f6);
-    color: white;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 1100;
-  }
-  /* Tăng kích thước khung 1.5x so với ban đầu */
-  #adminNoteBox {
-    position: fixed;
-    bottom: 70px;
-    right: 16px;
-    background: rgba(11,18,32,0.97);
-    border: 1px solid rgba(255,255,255,0.06);
-    border-radius: 12px;
-    padding: 15px; /* tăng padding */
-    width: 450px; /* từ 300px -> 450px */
-    max-height: 300px; /* từ 200px -> 300px */
-    overflow-y: auto;
-    display: none;
-    z-index: 1100;
-    font-size: 1.05em;
-  }
-  #adminNoteInput {
-    width: 100%;
-    min-height: 120px; /* tăng chiều cao */
-    max-height: 250px;
-    background: rgba(255,255,255,0.05);
-    border: none;
-    color: white;
-    padding: 10px;
-    border-radius: 8px;
-    resize: vertical;
-    margin-bottom: 8px;
-    display: none;
-  }
-  #adminNoteDisplay { font-size: 15px; color: #d1d5db; white-space: pre-wrap; }
-  /* placeholder mờ */
-  #adminNoteText.placeholder {
-    opacity: 0.5;
-    font-style: italic;
-  }
-
-  /* responsive nhỏ màn hình: giữ hợp lý */
-  @media(max-width:480px){
-    #adminNoteBox { width: calc(100% - 32px); right: 16px; left: 16px; bottom: 80px; }
-    #adminNoteInput { min-height: 100px; }
-  }
-</style>
-
-<script>
-  const adminNoteToggle = document.getElementById("adminNoteToggle");
-  const adminNoteBox = document.getElementById("adminNoteBox");
-  const adminNoteInput = document.getElementById("adminNoteInput");
-  const adminNoteText = document.getElementById("adminNoteText");
-  let noteVisible = false;
-
-  adminNoteToggle.onclick = () => {
-    noteVisible = !noteVisible;
-    adminNoteBox.style.display = noteVisible ? "block" : "none";
-    // chỉ hiện input nếu đang là admin
-    adminNoteInput.style.display = (noteVisible && sessionStorage.getItem("isAdmin")) ? "block" : "none";
-  };
-
-  // Hiển thị ghi chú với placeholder mờ khi trống
-  adminNoteRef.on("value", snap => {
-    const val = snap.val() || "";
-    if (!val.trim()) {
-      adminNoteText.textContent = "Không có ghi chú nào";
-      adminNoteText.classList.add("placeholder");
-    } else {
-      adminNoteText.textContent = val;
-      adminNoteText.classList.remove("placeholder");
-    }
-    // Đồng bộ giá trị input (nếu có)
-    if (typeof adminNoteInput !== 'undefined') adminNoteInput.value = val;
-  });
-
-  // Khi admin nhập → lưu realtime và cập nhật hiển thị
-  adminNoteInput.addEventListener("input", () => {
-    if (!sessionStorage.getItem("isAdmin")) return;
-    const text = adminNoteInput.value;
-    // Lưu chính xác giá trị (cho phép rỗng)
-    adminNoteRef.set(text.trim());
-    if (!text.trim()) {
-      adminNoteText.textContent = "Không có ghi chú nào";
-      adminNoteText.classList.add("placeholder");
-    } else {
-      adminNoteText.classList.remove("placeholder");
-    }
-  });
-</script>
-
-</body>
-</html>
+  <textarea id
