--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   .btn{margin-top:8px;border:none;padding:8px 10px;border-radius:8px;background:var(--accent);color:white;cursor:pointer;width:100%;transition:opacity 0.3s ease}
   .btn[disabled]{opacity:.45;cursor:not-allowed}
   .delete-btn{color:var(--danger);cursor:pointer;font-weight:bold;margin-left:8px}
-  footer{margin-top:14px;color:var(--muted);font-size:15px}
+  footer{margin-top:14px;color:var(--muted);font-size:15px} /* Tăng chữ ghi chú */
   .admin-panel{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
   .small{font-size:13px;color:var(--muted)}
   #statusBanner{padding:10px;text-align:center;border-radius:8px;margin-bottom:10px;font-weight:600}
@@ -127,7 +127,7 @@
   clearNameBtn.onclick = () => {
     const nameToRemove = prompt('Nhập tên cần xóa trên máy khách:');
     if (!nameToRemove) return;
-    blacklistRef.child(nameToRemove.trim().toLowerCase()).set(true);
+    blacklistRef.child(nameToRemove).set(true);
     alert(`✅ Đã thêm "${nameToRemove}" vào danh sách xoá`);
   };
 
@@ -198,9 +198,7 @@
 
     let name = localStorage.getItem('myName');
     if (!name) {
-      name = prompt('Nhập tên của bạn:');
-      if (!name) return;
-      name = name.trim();
+      name = prompt('Nhập tên của bạn:').trim();
       if (!name) return;
       localStorage.setItem('myName', name);
     }
@@ -231,6 +229,7 @@
       toggleOpenBtn.style.display = 'inline-block';
       clearNameBtn.style.display = 'inline-block';
       sessionStorage.setItem('isAdmin', 'true');
+      adminNoteInput.style.display = noteVisible ? "block" : "none"; // hiển thị input khi admin
     } else {
       resetBtn.style.display = 'none';
       logoutBtn.style.display = 'none';
@@ -238,6 +237,7 @@
       toggleOpenBtn.style.display = 'none';
       clearNameBtn.style.display = 'none';
       sessionStorage.removeItem('isAdmin');
+      adminNoteInput.style.display = "none";
     }
   }
 
@@ -274,81 +274,131 @@
     updateButtonStates();
   });
 
-  // ✅ FIX blacklist: chuẩn hóa tên & bỏ qua admin
   blacklistRef.on('value', snap => {
-    const listObj = snap.val() || {};
-    const blacklistSet = new Set(Object.keys(listObj).map(k => k.trim().toLowerCase()));
-
-    const myNameRaw = localStorage.getItem('myName');
-    const myName = myNameRaw ? myNameRaw.trim().toLowerCase() : "";
-
-    if (sessionStorage.getItem('isAdmin') === 'true') {
-      if (myName && blacklistSet.has(myName)) {
-        console.warn(`(blacklist) admin "${myNameRaw}" có trong blacklist (bỏ qua cảnh báo)`);
-      }
-      return;
-    }
-
-    if (myName && blacklistSet.has(myName)) {
+    const list = snap.val() || {};
+    const myName = localStorage.getItem('myName');
+    if (myName && list[myName]) {
       alert('⚠️ Tên cũ của bạn đã bị admin xoá, vui lòng nhập lại tên mới.');
       localStorage.removeItem('myName');
-    }
-  });
-  adminNoteRef.on('value', snap => {
-    const note = snap.val() || "";
-    if (note) {
-      let noteBox = document.getElementById("adminNoteBox");
-      if (!noteBox) {
-        noteBox = document.createElement("div");
-        noteBox.id = "adminNoteBox";
-        noteBox.style.cssText = `
-          background:rgba(255,255,255,0.05);
-          border-left:4px solid var(--accent2);
-          padding:10px;
-          border-radius:8px;
-          margin-top:14px;
-          font-size:14px;
-          color:var(--text);
-        `;
-        document.body.appendChild(noteBox);
-      }
-      noteBox.innerHTML = `<b>📝 Ghi chú Admin:</b> ${note}`;
     }
   });
 
   function isRegistrationOpen() {
     if (manualOpen) return true;
     const now = new Date();
-    const d = now.getDay();
-    const h = now.getHours();
-    const m = now.getMinutes();
-    if (d === 5 && (h > 19 || (h === 19 && m >= 50))) return true;
-    if (d === 6 && (h < 21 || (h === 21 && m <= 0))) return true;
-    return false;
+    const day = now.getDay();
+    const hour = now.getHours();
+    const minute = now.getMinutes();
+    return (day === 5 && (hour > 19 || (hour === 19 && minute >= 50))) ||
+           (day === 6 && (hour < 21 || (hour === 21 && minute === 0)));
   }
 
   function updateButtonStates() {
-    const open = isRegistrationOpen();
-    const isAdmin = sessionStorage.getItem('isAdmin') === 'true';
-    if (open) {
-      statusBanner.textContent = "🟢 Đang trong giờ đăng ký!";
+    const isOpen = isRegistrationOpen() || sessionStorage.getItem('isAdmin');
+    const buttons = document.querySelectorAll(".btn");
+    buttons.forEach(btn => {
+      if (["adminBtn","resetBtn","logoutBtn","toggleOpenBtn",""].includes(btn.id)) return;
+      if (btn === clearNameBtn) return;
+      btn.disabled = !isOpen;
+      btn.style.opacity = isOpen ? "1" : "0.45";
+      btn.title = isOpen ? "" : "Ngoài giờ đăng ký";
+    });
+    if (isOpen) {
       statusBanner.style.background = "rgba(16,185,129,0.15)";
       statusBanner.style.color = "#10b981";
+      statusBanner.textContent = manualOpen ? "🟢 Đăng ký đang mở (Admin bật thủ công)" : "🟢 Đang trong thời gian đăng ký";
     } else {
-      statusBanner.textContent = manualOpen ? "🟢 Đăng ký ngoài giờ (Admin bật)" : "🔒 Ngoài giờ đăng ký (Thứ 6 19:50 → Thứ 7 21:00)";
-      statusBanner.style.background = manualOpen ? "rgba(16,185,129,0.1)" : "rgba(239,68,68,0.1)";
-      statusBanner.style.color = manualOpen ? "#10b981" : "#ef4444";
+      statusBanner.style.background = "rgba(239,68,68,0.15)";
+      statusBanner.style.color = "#ef4444";
+      statusBanner.textContent = "🔒 Ngoài giờ đăng ký (sẽ mở 19:50 Thứ 6)";
     }
-    toggleOpenBtn.textContent = manualOpen ? "🔴 Tắt mở ngoài giờ" : "🟢 Mở đăng ký ngoài giờ";
-    toggleOpenBtn.style.background = manualOpen ? "#ef4444" : "#10b981";
-    const allBtns = document.querySelectorAll('.btn');
-    allBtns.forEach(b => {
-      if (b.id.startsWith("btn_")) b.disabled = !(open || manualOpen || isAdmin);
-    });
   }
-
-  setInterval(updateButtonStates, 30000);
   updateButtonStates();
+  setInterval(updateButtonStates, 60000);
 </script>
+
+<!-- ✅ Ghi chú Admin realtime -->
+<div id="adminNoteToggle">📝</div>
+<div id="adminNoteBox">
+  <textarea id="adminNoteInput" placeholder="✏️ Nhập ghi chú cho mọi người..."></textarea>
+  <div id="adminNoteDisplay">📝 <span id="adminNoteText">Không có ghi chú nào</span></div>
+</div>
+
+<style>
+  #adminNoteToggle {
+    position: fixed;
+    bottom: 18px;
+    right: 18px;
+    width: 42px;
+    height: 42px;
+    background: linear-gradient(135deg, #6b46c1, #3b82f6);
+    color: white;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1100;
+  }
+  #adminNoteBox {
+    position: fixed;
+    bottom: 70px;
+    right: 16px;
+    background: rgba(11,18,32,0.97);
+    border: 1px solid rgba(255,255,255,0.06);
+    border-radius: 12px;
+    padding: 10px;
+    width: 300px;
+    max-height: 200px;
+    overflow-y: auto;
+    display: none;
+    z-index: 1100;
+  }
+  #adminNoteInput {
+    width: 100%;
+    min-height: 80px;
+    max-height: 150px;
+    background: rgba(255,255,255,0.05);
+    border: none;
+    color: white;
+    padding: 6px;
+    border-radius: 8px;
+    resize: vertical;
+    margin-bottom: 8px;
+    display: none;
+  }
+  #adminNoteDisplay { font-size: 14px; color: #d1d5db; white-space: pre-wrap; }
+</style>
+
+<script>
+  const adminNoteToggle = document.getElementById("adminNoteToggle");
+  const adminNoteBox = document.getElementById("adminNoteBox");
+  const adminNoteInput = document.getElementById("adminNoteInput");
+  const adminNoteText = document.getElementById("adminNoteText");
+  let noteVisible = false;
+
+  adminNoteToggle.onclick = () => {
+    noteVisible = !noteVisible;
+    adminNoteBox.style.display = noteVisible ? "block" : "none";
+    if (noteVisible && sessionStorage.getItem("isAdmin")) {
+      adminNoteInput.style.display = "block";
+    } else {
+      adminNoteInput.style.display = "none";
+    }
+  };
+
+  adminNoteRef.on("value", snap => {
+    const val = snap.val() || "Không có ghi chú nào";
+    adminNoteText.textContent = val;
+    adminNoteInput.value = val;
+  });
+
+  adminNoteInput.addEventListener("input", () => {
+    if (!sessionStorage.getItem("isAdmin")) return;
+    adminNoteRef.set(adminNoteInput.value.trim());
+  });
+</script>
+
 </body>
 </html>
